tests/semantic/valid/variable_declared_then_defined.c
/*
 * Multi-line comment.
 */

extern int32_t a;
int32_t a;
