tests/semantic/invalid/variable_already_declared.c
/*
 * Multi-line comment.
 */

extern int32_t a;
extern int32_t a;
